# outline-mod

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
data/SKSE/Plugins/: ItemOutline.ini
src/: CrosshairWatcher.cpp  CrosshairWatcher.h  HighlightManager.cpp  HighlightManager.h  ItemFilter.cpp  ItemFilter.h  OutlineRenderer.cpp  OutlineRenderer.h  PCH.h  Settings.cpp  Settings.h  main.cpp
